versions/v3.7.0/build/dts/api/bindings/sensor/st,stm32-qdec.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/build/dts/api/bindings/sensor/st,stm32-qdec.html
original_path: build/dts/api/bindings/sensor/st,stm32-qdec.html
---

This is the documentation for the latest (main) development branch of
Zephyr. If you are looking for the documentation of previous releases, use
the drop-down list at the bottom of the left panel and select the desired version.

# st,stm32-qdec

Vendor: [STMicroelectronics](../../bindings.md#dt-vendor-st)

## Description

```text
STM32 quadrature decoder
```

## Properties

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

| Name | Type | Details |
| --- | --- | --- |
| `pinctrl-0` | `phandles` | ```text Pin configuration/s for the first state. Content is specific to the selected pin controller driver implementation. ```  This property is **required**. |
| `pinctrl-1` | `phandles` | ```text Pin configuration/s for the second state. See pinctrl-0. ``` |
| `pinctrl-2` | `phandles` | ```text Pin configuration/s for the third state. See pinctrl-0. ``` |
| `pinctrl-3` | `phandles` | ```text Pin configuration/s for the fourth state. See pinctrl-0. ``` |
| `pinctrl-4` | `phandles` | ```text Pin configuration/s for the fifth state. See pinctrl-0. ``` |
| `pinctrl-names` | `string-array` | ```text Names for the provided states. The number of names needs to match the number of states. ```  This property is **required**. |
| `st,encoder-mode` | `int` | ```text Set encoder mode. The following modes are supported: 0x1: Encoder mode 1 (Default) 0x2: Encoder mode 2 0x3: Encoder mode 3 Some MCUs supports additional modes: 0x10002: Encoder mode: Clock plus direction, x2 mode 0x10003: Encoder mode: Clock plus direction, x1 mode 0x10004: Encoder mode: Directional Clock, x2 mode 0x10005: Encoder mode: Directional Clock, x1 mode 0x10006: Quadrature encoder mode: x1 mode, counting on tim_ti1fp1 0x10007: Quadrature encoder mode: x1 mode, counting on tim_ti2fp2 Default value complies with stm32 low level timer encoder init value. ```  Default value: `1`  Legal values: `1`, `2`, `3`, `65538`, `65539`, `65540`, `65541`, `65542`, `65543` |
| `st,input-polarity-inverted` | `boolean` | ```text Encoder is triggered by a falling edge on the input pin ``` |
| `st,input-filter-level` | `int` | ```text Intensity of the filter applied to the input signal. This is implemented by scaling the sampling frequency and adding a counter in which N consecutive samples with same value are needed to validate a transition. Mapping is as follows (F_clk is the timer's clock): 0: No filter, sampling is done at F_dts (default value) 1: Fs = F_clk, N=2 2: Fs = F_clk, N=4 3: Fs = F_clk, N=8 4: Fs = F_clk/2, N=6 5: Fs = F_clk/2, N=8 6: Fs = F_clk/4, N=6 7: Fs = F_clk/4, N=8 8: Fs = F_clk/8, N=6 9: Fs = F_clk/8, N=8 10: Fs = F_clk/16, N=5 11: Fs = F_clk/16, N=6 12: Fs = F_clk/16, N=8 13: Fs = F_clk/32, N=5 14: Fs = F_clk/32, N=6 15: Fs = F_clk/32, N=8 Default value is set by hardware at reset ```  Legal values: `0`, `1`, `2`, `3`, `4`, `5`, `6`, `7`, `8`, `9`, `10`, `11`, `12`, `13`, `14`, `15` |
| `st,counts-per-revolution` | `int` | ```text This is a number >= 1 that is used to determine how many revolutions were done based on the current counter's value. ```  This property is **required**. |

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “st,stm32-qdec” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `power-domain` | `phandle` | ```text Power domain the device belongs to.  The device will be notified when the power domain it belongs to is either suspended or resumed. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |
| `status` | `string` | ```text indicates the operational status of a device ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text compatible strings ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text register space ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text name of each register space ``` |
| `interrupts` | `array` | ```text interrupts for device ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text extended interrupt specifier for device ``` |
| `interrupt-names` | `string-array` | ```text name of each interrupt ``` |
| `interrupt-parent` | `phandle` | ```text phandle to interrupt controller node ``` |
| `label` | `string` | ```text Human readable string describing the device (used as device_get_binding() argument) ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information.  This property is **deprecated**. |
| `clocks` | `phandle-array` | ```text Clock gate information ``` |
| `clock-names` | `string-array` | ```text name of each clock ``` |
| `#address-cells` | `int` | ```text number of address cells in reg property ``` |
| `#size-cells` | `int` | ```text number of size cells in reg property ``` |
| `dmas` | `phandle-array` | ```text DMA channels specifiers ``` |
| `dma-names` | `string-array` | ```text Provided names of DMA channel specifiers ``` |
| `io-channels` | `phandle-array` | ```text IO channels specifiers ``` |
| `io-channel-names` | `string-array` | ```text Provided names of IO channel specifiers ``` |
| `mboxes` | `phandle-array` | ```text mailbox / IPM channels specifiers ``` |
| `mbox-names` | `string-array` | ```text Provided names of mailbox / IPM channel specifiers ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
